# fact_scrape

./: .gitignore  .travis.yml  HLint.hs  Makefile  README.md  circle.yml  fact_scraper.py  package.json  scrape-the-truth.cabal  stack.yaml  trutch.cabal.bak
executable/: Main.hs
fact_scraper/: fact_scraper.py  models.py  schema.sql
fact_scraper/tests/: example.html  scrape.py
migrations/: Main.hs  MigratePersonStatementsPersonId.hs
old/: requirements.pip
old/fact_scraper/: util.py
site/: index.html  main.css
site/js/: main.js.jsx
site/js/actions/: graphActions.js
site/js/components/: personTable.js.jsx  truthGraph.js.jsx
site/js/constants/: graphConstants.js
site/js/stores/: graphStore.js
site/js/utils/: client.js
site/stylesheets/: main.scss
src/: Api.hs  Database.hs  Scraper.hs  Server.hs
src/Politifact/: Scraper.hs
test/: ScraperSpec.hs  WebSpec.hs
test/fixtures/: first10pages.db  latest-fact-checks-PolitiFact.html  unicode-error.html
truth-backend/: package.yaml  truth-backend.cabal
truth-backend/cmd/: Main.hs
truth-backend/src/Truth/: API.hs  Server.hs
truth-backend/src/Truth/API/: Internal.hs
truth-backend/src/Truth/Server/: Database.hs  Handlers.hs  Instrument.hs  Logging.hs
truth-backend/tests/: Main.hs
truth-scraper/: package.yaml  truth-scraper.cabal
truth-scraper/cmd/: Main.hs
truth-scraper/src/Truth/: Scraper.hs
truth-scraper/src/Truth/Scraper/: Politifact.hs  TAGS
truth-scraper/tests/: Main.hs
