name: scrape-the-truth
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
copyright: 2015 brady.ouren <brady.ouren@gmail.com>
maintainer: brady.ouren <brady.ouren@gmail.com>
synopsis: TODO
description:
    TODO
category: TODO
author: brady.ouren <brady.ouren@gmail.com>
tested-with: GHC ==7.8 GHC ==7.6
extra-source-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/tippenein/scrape_the_truth

library
  hs-source-dirs: src
  exposed-modules:
      Politifact.Scraper
    , Database
    , Api
    , Server
  build-depends:
      base ==4.*
    , bytestring
    , cassava
    , HandsomeSoup
    , hxt
    , either
    , persistent
    , persistent-template
    , persistent-sqlite
    , esqueleto
    , pipes
    , servant >= 0.4
    , servant-server >= 0.4
    , text
    , time
    , transformers
    , warp
    , wai
    , wai-extra
    , wai-cors
  default-language: Haskell2010
  ghc-prof-options: -threaded -rtsopts -with-rtsopts=-N
  ghc-options: -Wall
    -fwarn-unused-imports -fno-warn-missing-signatures

executable scrape-the-truth
  hs-source-dirs: executable
  main-is: Main.hs
  build-depends:
      base -any
    , scrape-the-truth -any
  default-language: Haskell2010
  ghc-options:
    -fwarn-unused-imports -fno-warn-missing-signatures -threaded -rtsopts -with-rtsopts=-N

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base -any
    , scrape-the-truth -any
    , hspec
    , hspec-wai
    , time
    , text
    , hspec-wai-json
    , HandsomeSoup
    , hxt
    , HUnit -any
    , QuickCheck -any
  default-language:    Haskell2010
  other-modules:
      ScraperSpec
    , WebSpec
  ghc-options: 
    -threaded -rtsopts -with-rtsopts=-N
